styles.css
html{
	position: static;
}

#adBanner {
	width: 100%;
	height: 100px;
	border: 2px;
	border-color: black;
	border-style: solid;
	text-align: center;
	margin: auto;
	margin-top: 20px;
}

h1{
	text-align: center;
}

#profile {
	width: 200px;
	height: 420px;
	border: 2px;
	border-color: black;
	border-style: solid;
	float: left;
	margin-top: 100px;
	margin-left: 15px;
/*	position: fixed;*/
	background-color: grey;
	color: white;

}

#profile ul li {
/*	text-align: left;
	margin-left: 0px;
	position: left;
	padding-left: 0px;*/
	float: left;
	color: white;

}

#logo img {
	height: 300px;
	margin-top: 10px;
}

.content div{
	display: inline-block;
}

#headshot {
	width: 195px;
	float: center;
	margin-left: auto;
	margin-right: auto;
}

body {
	background: url("./images/background1.JPG") no-repeat;
	background-size: cover;
	background-repeat: no-repeat;
}

#kylesInfo{
	background-color: grey;
	color: white;
	opacity: 0.4;
	width: 195px;
	text-align: left;
}

.middle{
	width: 500px;
	height: 700px;
	border: 2px;
	border-color: black;
	border-style: solid;
	margin-left: 50px;
	margin-top: 100px;
	float: center;
}

.listings {
	width: 270px;
	height: 700px;
	border: 2px;
	border-color: black;
	border-style: solid;
	float: right;
	margin-right: 15px;
	margin-top: 100px;
	overflow: scroll;
}

h2 {
	text-align: center;
	color: black;
	font-size: 40px;
}

.house{
	width: 190px;
	margin-left: 30px;
}
li{
	color: black;
	list-style-type: none;


}

article {
	background-color: grey;
	opacity: 0.8;
	width: 240px;
	margin: auto;	
}

footer{
	border: 2px;
	border-color: black;
	border-style: solid;
	height: 30px;
	width: 100%;
	background: grey;
	opacity: 0.6;
	color: white;

}

.listings h2{
	text-shadow: 2px 2px grey;
}

#homeSearch button{
	background: #0080ff;
}

#homeSearch a{
	color: blue;
/*	text-decoration: none;*/
}

#homeSearch button:active {
	background-color: #0059b3;
}

